add first buisness logic now need to check and redo something